# sop

./: Cargo.toml  cli.rs  main.rs  toml_parser.rs  utils.rs
commands/: add.rs  init.rs  mod.rs  remove.rs  run.rs  setup.rs  update.rs
