[package]
name = "sop"
version = "0.1.0"
edition = "2021"
description = "Official package manager for Soplang"
authors = ["Soplang Team"]

[[bin]]
name = "sop"
path = "main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dialoguer = "0.11.0"
colored = "2.0"
fs_extra = "1.3"
rand = "0.8.5" 